// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea match snapshot TextareaAllFalse 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary css-ssr94h-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="textarea"
    >
      Label
    </label>
    <textarea
      class=""
      id="textarea"
      maxlength="250"
      placeholder="Describe your issue"
      rows="1"
      style="height: 150px; width: 320px; resize: none; overflow: hidden;"
    />
    <textarea
      aria-hidden="true"
      class=""
      readonly=""
      style="visibility: hidden; position: absolute; overflow: hidden; height: 150px; top: 0px; left: 0px; transform: translateZ(0); width: 320px; resize: none; padding: 0px;"
      tabindex="-1"
    />
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium css-1riwtgr-MuiFormHelperText-root"
      style="display: block; text-align: right;"
    >
      0/250
    </p>
  </div>
</div>
`;

exports[`Textarea match snapshot TextareaAllTrue 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required css-ssr94h-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="textarea"
    >
      Label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <textarea
      class="textarea--error"
      disabled=""
      id="textarea"
      maxlength="250"
      placeholder="Describe your issue"
      required=""
      rows="1"
      style="height: 150px; width: 320px; resize: both; overflow: hidden;"
    />
    <textarea
      aria-hidden="true"
      class="textarea--error"
      readonly=""
      style="visibility: hidden; position: absolute; overflow: hidden; height: 150px; top: 0px; left: 0px; transform: translateZ(0); width: 320px; resize: both; padding: 0px;"
      tabindex="-1"
    />
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium css-1riwtgr-MuiFormHelperText-root"
      style="display: block; text-align: right;"
    >
      0/250
    </p>
  </div>
</div>
`;
